--- a/.github/workflows/extract_partitions.yml
+++ b/.github/workflows/extract_partitions.yml
@@ -12,11 +12,15 @@ on:
         required: true
         default: 'boot'
         type: string
+  # 定时触发, 每天凌晨自动清理仓库中所有旧的工作流记录和 Releases
+#  schedule:
+#    - cron: '0 0 * * *'
 
 jobs:
   extract:
     runs-on: ubuntu-latest
     permissions:
+      actions: write
       contents: write
 
     steps:
@@ -30,16 +34,17 @@ jobs:
 
       - name: Download payload-dumper-go
         run: |
-          wget https://github.com/ssut/payload-dumper-go/releases/download/1.3.0/payload-dumper-go_1.3.0_linux_amd64.tar.gz
-          tar -zxvf payload-dumper-go_1.3.0_linux_amd64.tar.gz
+          wget -q https://github.com/ssut/payload-dumper-go/releases/download/1.3.0/payload-dumper-go_1.3.0_linux_amd64.tar.gz
+          tar -zxf payload-dumper-go_1.3.0_linux_amd64.tar.gz
           chmod +x payload-dumper-go
 
       - name: Download Firmware
         run: |
           echo "开始下载固件..."
+          echo "URL: ${{ github.event.inputs.firmware_url }}"
           curl -L -o firmware.zip "${{ github.event.inputs.firmware_url }}" --progress-bar
           echo "下载完成!"
-
+          ls -lh firmware.zip
 
       - name: Extract payload_properties.txt and payload.bin
         run: |
@@ -81,11 +86,21 @@ jobs:
             payload_properties.txt
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
-          
-      - name: Delete Old Workflow Runs
+
+      - name: Delete Old Workflow Runs (All Workflows)
         uses: Mattraiano/delete-old-workflow-runs@v2
         with:
           token: ${{ secrets.TOKEN }}
           repository: ${{ github.repository }}
           retain_days: 5
           keep_minimum_runs: 0
+          delete_workflow_pattern: '.*'
+          delete_workflow_by_state_filter: 'all'
+
+      - name: Delete Old Releases
+        uses: dev-drprasad/delete-older-releases@v0.3.3
+        with:
+          keep_latest: 0
+          delete_older_than: 5d
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
