--- a/.github/workflows/extract-partitions-Kernelsu.yml
+++ b/.github/workflows/extract-partitions-Kernelsu.yml
@@ -175,7 +175,7 @@ jobs:
           tag_name: "extract-${{ github.run_id }}"
           name: "Extracted Partitions for ${{ env.DEVICE_MODEL || 'Unknown Device' }}"
           body: |
-            Extracted from: ${{ github.event.inputs.firmware_url }}
+         #   Extracted from: ${{ github.event.inputs.firmware_url }}
             Partitions: ${{ github.event.inputs.partitions }}
             KernelSU Patched: ${{ github.event.inputs.patch_kernelsu }}
             KMI Version: ${{ github.event.inputs.kmi_version }}
