--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -19,18 +19,12 @@ jobs:
         uses: actions/checkout@v4
 
       # 清理旧的工作流运行
-      - name: Delete Old Workflow Runs
-        uses: Mattraks/delete-workflow-runs@v2
+      - name: Delete releases and workflows runs
+        uses: ophub/delete-releases-workflows@main
         with:
-          token: ${{ secrets.TOKEN }}
-          repository: ${{ github.repository }}
-          retain_days: 5          
-          keep_minimum_runs: 0    
-          
-      - name: Delete Old Releases
-        uses: KengoTODA/actions-delete-release@v1
-        with:
-         keep_latest: 5           
-         older_than: 5            
-         env:
-         GITHUB_TOKEN: ${{ secrets.TOKEN }}
+         delete_releases: true
+         releases_keep_latest: 3
+         delete_workflows: true
+         workflows_keep_day: 3
+         delete_tags: true
+         gh_token: ${{ secrets.TOKEN }}
